--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,7 @@ body {
   width: 40%;
   background-color: #e6cf1d;
   border: 3px solid white;
+  margin: 0 auto;
   -webkit-box-shadow: 3px 3px black;
           box-shadow: 3px 3px black;
   text-align: center;
