--- a/css/style.scss
+++ b/css/style.scss
@@ -7,8 +7,7 @@ body{
     overflow-x: hidden;
 }
 .header{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
     overflow-x: hidden;
     display: block;
     background-color: #000;
@@ -50,36 +49,38 @@ body{
 .title-pic{
     width: 100vw;
     overflow-x: hidden;
+    margin: 0 auto;
+    display: inline-flex;
+    justify-content: center;
     img{
         width: 15vw;
+        display: block;
         min-width: 200px;
-        position: absolute;
-        top:30vh;
         z-index: 100;
         &:first-child{
-            left: 10vw;
             animation:title-pic-left;
             animation-duration: 4s;
+            margin-right: 10px;
         }
         @keyframes title-pic-left{
             from{
-                left: 35vw;
+                transform: translateX(15vw);
             }
             to{
-                left:10vw;
+                transform: translateX(0);
             }
         }
         &:last-child{
-            right:10vw;
             animation:title-pic-right;
             animation-duration: 4s;
+            margin-left: 10px;
         }
         @keyframes title-pic-right{
             from{
-                right: 35vw;
+                transform: translateX(-15vw);
             }
             to{
-                right:10vw;
+                transform: translateX(0);
             }
         }
     }
@@ -88,30 +89,12 @@ body{
             width: 12vw;
             top:40vh;
             &:first-child{
-                left: -60vw;
                 animation:title-pic-left;
                 animation-duration: 4s;
             }
-            @keyframes title-pic-left{
-                from{
-                    left: 2vw;
-                }
-                to{
-                    left:-60vw;
-                }
-            }
             &:last-child{
-                right:-60vw;
                 animation:title-pic-right;
                 animation-duration: 4s;
-            }
-            @keyframes title-pic-right{
-                from{
-                    right: 2vw;
-                }
-                to{
-                    right:-60vw;
-                }
             }
         }
 
@@ -121,6 +104,8 @@ body{
 .event-title{
     font-family: 'ZCOOL QingKe HuangYou', cursive;
     color: yellow;
+    display: inline-block;
+    margin: 10px 20px;
     text-align: center;
     letter-spacing: 10px;
     padding-top: 10vh;
@@ -137,9 +122,8 @@ body{
     }
 }
 .event-button-square{
-    width: 100vw;
-    position: absolute;
-    bottom: 0;
+    width: 100%;
+    margin-top: 30px;
     .event-button{
         font-family: 'ZCOOL QingKe HuangYou', cursive;
         text-align: center;
