--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
   overflow-x: hidden;
   display: block;
   background-color: #000;
+  font-family: 'Noto Sans SC', sans-serif;
   -webkit-animation-name: flashes;
           animation-name: flashes;
   -webkit-animation-iteration-count: infinite;
