--- a/css/style.css
+++ b/css/style.css
@@ -313,6 +313,12 @@ body {
   font-family: 'Noto Sans SC', sans-serif;
 }
 
+@media screen and (max-width: 769px) {
+  .cardsBar .card {
+    width: 22.5%;
+  }
+}
+
 .cardsBar .card img {
   width: 100%;
   margin-top: 10px;
