--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,7 @@ body{
     overflow-x: hidden;
 }
 .header{
-    width: 100%;
+    width: 100vw;
     overflow-x: hidden;
     display: block;
     background-color: #000;
@@ -27,7 +27,7 @@ body{
 .title{
     width: 40%;
     min-width: 300px;
-    padding-top: 10vh;
+    padding-top: 2vh;
     margin: 0 auto;
     img{
         width: 100%;
@@ -49,13 +49,13 @@ body{
 .title-pic{
     width: 100vw;
     overflow-x: hidden;
-    margin: 0 auto;
+    margin: 3vh auto;
     display: inline-flex;
     justify-content: center;
     img{
-        width: 15vw;
-        display: block;
+        width: 13vw;
         min-width: 200px;
+        display: block;        
         z-index: 100;
         &:first-child{
             animation:title-pic-left;
@@ -85,9 +85,8 @@ body{
         }
     }
     @media screen and (max-width:769px) {
+        margin: 5.1vh auto;
         img{
-            width: 12vw;
-            top:40vh;
             &:first-child{
                 animation:title-pic-left;
                 animation-duration: 4s;
@@ -123,7 +122,7 @@ body{
 }
 .event-button-square{
     width: 100%;
-    margin-top: 30px;
+    margin-top: 3vh;
     .event-button{
         font-family: 'ZCOOL QingKe HuangYou', cursive;
         text-align: center;
@@ -134,8 +133,12 @@ body{
         margin: 0 auto;
         padding: 20px 10px;
         background-color: yellow;
-        color: black;
-        cursor: pointer;
+        a{
+            width: 100%;
+            height: 100%;
+            text-decoration: none;
+            color: black;
+        }
         @media screen and (max-width:769px){
             width: 50%;
             font-size: 1.2rem;
@@ -149,7 +152,12 @@ body{
 }
 .event-1{
     background-color: #000072;
-    overflow-y: hidden;
+    overflow: hidden;
+    .event-content{
+        color: #fff;
+        text-align: center;
+        font-family: 'Noto Sans SC', sans-serif;
+    }
     h3{
         color: #e6cf1d;
         font-family: 'ZCOOL QingKe HuangYou', cursive;
@@ -158,6 +166,7 @@ body{
         letter-spacing: 10px;
         font-size: 5rem;
         margin-bottom: 20px;
+        margin: 5vh auto;
     }
     .click-button{
         width: 40%;
@@ -180,7 +189,182 @@ body{
     img{
         position: relative;
         width: 100%;
-        margin-top: -20px;
+        margin-top: -2vh;
+    }
+}
+.event-2{
+    background-color: #000072;
+    overflow: hidden;
+    .event-content{
+        color: #fff;
+        text-align: center;
+        font-family: 'Noto Sans SC', sans-serif;
+    }
+    h3{
+        color: #e6cf1d;
+        font-family: 'ZCOOL QingKe HuangYou', cursive;
+        text-align: center;
+        text-shadow: 3px 3px black;
+        letter-spacing: 10px;
+        font-size: 4rem;
+        margin-bottom: 20px;
+        margin: 5vh auto;
+    }
+    .click-button{
+        width: 40%;
+        min-width: 300px;
+        background-color: #e6cf1d;
+        border:3px solid white;
+        border-radius: 10px;
+        margin: 0 auto;
+        padding: 10px;
+        box-shadow: 3px 3px black;
+        text-align: center;
+        a{
+            font-family: 'ZCOOL QingKe HuangYou', cursive;
+            font-size: 4rem;
+            letter-spacing: 10px;
+            text-decoration: none;
+            color: white;
+        }
+    }
+    .picbox{
+        width: 100%;
+        display: inline-flex;
+        justify-content: space-evenly;
+        img{
+            width: 30%;
+            @media screen and (max-width:769px){
+                width: 50%;
+            }
+        }
+    }
+}
+
+.event-3{
+    background-color: #151c26;
+    overflow: hidden;
+    .event-content{
+        color: #fff;
+        text-align: center;
+        font-family: 'Noto Sans SC', sans-serif;
+    }
+    h3{
+        color: #e6cf1d;
+        font-family: 'ZCOOL QingKe HuangYou', cursive;
+        text-align: center;
+        text-shadow: 3px 3px black;
+        letter-spacing: 10px;
+        font-size: 5rem;
+        margin-bottom: 20px;
+        margin: 5vh auto;
+    }
+    .click-button{
+        width: 40%;
+        min-width: 300px;
+        background-color: #e6cf1d;
+        border:3px solid white;
+        border-radius: 10px;
+        margin: 0 auto;
+        padding: 10px;
+        box-shadow: 3px 3px black;
+        text-align: center;
+        a{
+            font-family: 'ZCOOL QingKe HuangYou', cursive;
+            font-size: 4rem;
+            letter-spacing: 10px;
+            text-decoration: none;
+            color: white;
+        }
+    }
+    .picbox{
+        width: 100%;
+
+        display: inline-flex;
+        justify-content: space-around;
+        img{
+            width: 30%;
+            @media screen and (max-width:769px){
+                width: 50%;
+            }
+        }
+        
+    }
+}
+.event-4{
+    background-color: #0b0507;
+    overflow: hidden;
+    h3{
+        color: #e6cf1d;
+        font-family: 'ZCOOL QingKe HuangYou', cursive;
+        text-align: center;
+        text-shadow: 3px 3px black;
+        letter-spacing: 10px;
+        font-size: 5rem;
+        margin-bottom: 20px;
+        margin: 5vh auto;
+    }
+    .flexbox{
+        display: inline-flex;
+        flex-wrap:wrap;
+
+    }
+    .cardsBar{
+        width: 50%;
+        display: inline-flex;
+        margin-bottom: 20px;
+        justify-content: center;
+        flex-wrap:wrap;
+        text-align: center;
+        @media screen and (max-width:769px) {
+            width: 100%;
+        }
+        .card{
+            @media screen and (max-width:769px) {
+                width: 45%;
+            }
+            width: 45%;
+            margin: 10px 5px;
+            padding:10px;
+            background-color: #fff;
+            border-radius: 10px;
+            text-align: center;
+            font-family: 'Noto Sans SC', sans-serif;
+            img{
+                width: 100%;
+                margin-top: 10px;
+            }
+            span{
+                color: red;
+                font-weight: bold;
+            }
+            .buy{
+                background-color: #000072;
+                width: 90%;
+                margin: 0 auto;
+                padding: 10px;
+                border-radius: 5px;
+                font-family: 'Noto Sans SC', sans-serif;
+                a{
+                    color: white;
+                    text-decoration: none;
+                    font-family: 'Noto Sans SC', sans-serif;
+                }
+            }
+        }
+    }
+    .picbox{
+        width: 50%;
+        @media screen and (max-width:769px){
+            width: 100%;
+        }
+        display: inline-flex;
+        justify-content: space-around;
+        padding:30px;
+        img{
+            width: 100%;
+        }
+        
     }
 }
 .cardsBar{
@@ -189,11 +373,11 @@ body{
     margin-bottom: 20px;
     justify-content: center;
     flex-wrap:wrap;
+    text-align: center;
     .card{
         @media screen and (max-width:769px) {
             width: 45%;
         }
-        
         width: 22.5%;
         margin: 10px 5px;
         padding:10px;
@@ -207,10 +391,11 @@ body{
         }
         span{
             color: red;
+            font-weight: bold;
         }
         .buy{
             background-color: #000072;
-            width: 80%;
+            width: 90%;
             margin: 0 auto;
             padding: 10px;
             border-radius: 5px;
