--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,20 @@ body {
   overflow-x: hidden;
 }
 
+.backToTop {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #ccc;
+  display: block;
+  position: fixed;
+  bottom: 10vh;
+  right: 5vw;
+  z-index: 100;
+  padding: 15px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 .header {
   width: 100vw;
   overflow-x: hidden;
@@ -48,6 +62,12 @@ body {
   min-width: 300px;
   padding-top: 2vh;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 769px) {
+  .title {
+    padding-top: 7vh;
+  }
 }
 
 .title img {
@@ -254,6 +274,9 @@ body {
 
 .event-1 {
   background-color: #000072;
+  background-image: url(../img/bg.gif);
+  background-size: contain;
+  background-blend-mode: color;
   overflow: hidden;
 }
 
@@ -288,6 +311,8 @@ body {
 }
 
 .event-1 .click-button a {
+  width: 100%;
+  height: 100%;
   font-family: 'ZCOOL QingKe HuangYou', cursive;
   font-size: 4rem;
   letter-spacing: 10px;
@@ -304,6 +329,9 @@ body {
 .event-2 {
   background-color: #000072;
   overflow: hidden;
+  background-image: url(../img/bg.gif);
+  background-size: contain;
+  background-blend-mode: color;
 }
 
 .event-2 .event-content {
@@ -337,6 +365,8 @@ body {
 }
 
 .event-2 .click-button a {
+  width: 100%;
+  height: 100%;
   font-family: 'ZCOOL QingKe HuangYou', cursive;
   font-size: 4rem;
   letter-spacing: 10px;
@@ -349,9 +379,8 @@ body {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .event-2 .picbox img {
@@ -367,6 +396,9 @@ body {
 .event-3 {
   background-color: #151c26;
   overflow: hidden;
+  background-image: url(../img/bg.gif);
+  background-size: contain;
+  background-blend-mode: color;
 }
 
 .event-3 .event-content {
@@ -400,6 +432,8 @@ body {
 }
 
 .event-3 .click-button a {
+  width: 100%;
+  height: 100%;
   font-family: 'ZCOOL QingKe HuangYou', cursive;
   font-size: 4rem;
   letter-spacing: 10px;
@@ -506,6 +540,8 @@ body {
 }
 
 .event-4 .cardsBar .card .buy a {
+  width: 100%;
+  height: 100%;
   color: white;
   text-decoration: none;
   font-family: 'Noto Sans SC', sans-serif;
