--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,19 @@ body{
     padding: 0;
     overflow-x: hidden;
 }
+.backToTop{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: #ccc;
+    display: block;
+    position: fixed;
+    bottom: 10vh;
+    right: 5vw;
+    z-index: 100;
+    padding: 15px;
+    background-color: rgba($color: #fff, $alpha: 0.5);
+}
 .header{
     width: 100vw;
     overflow-x: hidden;
@@ -29,6 +42,9 @@ body{
     min-width: 300px;
     padding-top: 2vh;
     margin: 0 auto;
+    @media screen and (max-width:769px) {
+        padding-top: 7vh;   
+    }
     img{
         width: 100%;
         filter:drop-shadow(0px 0px 8px #E51010 );
@@ -152,6 +168,9 @@ body{
 }
 .event-1{
     background-color: #000072;
+    background-image: url(../img/bg.gif);
+    background-size: contain;
+    background-blend-mode: color;
     overflow: hidden;
     .event-content{
         color: #fff;
@@ -179,6 +198,8 @@ body{
         box-shadow: 3px 3px black;
         text-align: center;
         a{
+            width: 100%;
+            height: 100%;
             font-family: 'ZCOOL QingKe HuangYou', cursive;
             font-size: 4rem;
             letter-spacing: 10px;
@@ -195,6 +216,9 @@ body{
 .event-2{
     background-color: #000072;
     overflow: hidden;
+    background-image: url(../img/bg.gif);
+    background-size: contain;
+    background-blend-mode: color;
     .event-content{
         color: #fff;
         text-align: center;
@@ -221,6 +245,8 @@ body{
         box-shadow: 3px 3px black;
         text-align: center;
         a{
+            width: 100%;
+            height: 100%;
             font-family: 'ZCOOL QingKe HuangYou', cursive;
             font-size: 4rem;
             letter-spacing: 10px;
@@ -231,7 +257,7 @@ body{
     .picbox{
         width: 100%;
         display: inline-flex;
-        justify-content: space-evenly;
+        justify-content: space-around;
         img{
             width: 30%;
             @media screen and (max-width:769px){
@@ -244,6 +270,9 @@ body{
 .event-3{
     background-color: #151c26;
     overflow: hidden;
+    background-image: url(../img/bg.gif);
+    background-size: contain;
+    background-blend-mode: color;
     .event-content{
         color: #fff;
         text-align: center;
@@ -270,6 +299,8 @@ body{
         box-shadow: 3px 3px black;
         text-align: center;
         a{
+            width: 100%;
+            height: 100%;
             font-family: 'ZCOOL QingKe HuangYou', cursive;
             font-size: 4rem;
             letter-spacing: 10px;
@@ -293,7 +324,7 @@ body{
 }
 .event-4{
     background-color: #0b0507;
-    overflow: hidden;
+    overflow: hidden;    
     h3{
         color: #e6cf1d;
         font-family: 'ZCOOL QingKe HuangYou', cursive;
@@ -346,6 +377,8 @@ body{
                 border-radius: 5px;
                 font-family: 'Noto Sans SC', sans-serif;
                 a{
+                    width: 100%;
+                    height: 100%;
                     color: white;
                     text-decoration: none;
                     font-family: 'Noto Sans SC', sans-serif;
