--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ body {
 
 @media screen and (max-width: 769px) {
   .event-2 .picbox img {
-    width: 50%;
+    width: 30%;
   }
 }
 
@@ -616,9 +616,10 @@ body {
   font-family: 'Noto Sans SC', sans-serif;
 }
 
-.cardsBar .card .buy a {
+.cardsBar .card .buy p {
   color: white;
   text-decoration: none;
   font-family: 'Noto Sans SC', sans-serif;
+  margin: 0;
 }
 /*# sourceMappingURL=style.css.map */
