--- a/css/style.css
+++ b/css/style.css
@@ -614,12 +614,14 @@ body {
   padding: 10px;
   border-radius: 5px;
   font-family: 'Noto Sans SC', sans-serif;
-}
-
-.cardsBar .card .buy p {
   color: white;
   text-decoration: none;
   font-family: 'Noto Sans SC', sans-serif;
   margin: 0;
+  border: 0;
+}
+
+.hidden {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
