--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,8 @@ body {
 
 .title-pic {
   width: 100vw;
+  height: 20vh;
+  min-height: 300px;
   overflow-x: hidden;
   margin: 3vh auto;
   display: -webkit-inline-box;
@@ -210,7 +212,7 @@ body {
   margin: 10px 20px;
   text-align: center;
   letter-spacing: 10px;
-  padding-top: 10vh;
+  padding-top: 3vh;
   font-size: 1.8rem;
   -webkit-animation: event-neon;
           animation: event-neon;
@@ -376,6 +378,8 @@ body {
 
 .event-2 .picbox {
   width: 100%;
+  height: 20vh;
+  min-height: 300px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
